Update ProjectsMain component and fix alignments

--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,6 @@ body {
   background-color: var(--color-darkBrown);
 }
 
-#root {
+/* #root {
   touch-action: none;
-}
+} */
